Fix Cmd line to pass integration tests